--- a/gameUIbvv/index.html
+++ b/gameUIbvv/index.html
@@ -6,12 +6,11 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <div>
-    <button class="startBtn">START</button>
-    <canvas class="canvas" width="600" height="504"></canvas>
+  <div class="count">9999</div> 
   <div id= "game">
     <div id= "character"></div>
     <div id= "block"></div>
+  </div>
 </body>
 <script src="./index.js"></script>
 </html>
